--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Transmission</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -48,11 +48,11 @@
 
 </html>
 
-<script src="shared.js"></script>
-<script src="entity.js"></script>
-<script src="base.js"></script>
-<script src="relay.js"></script>
-<script src="energy.js"></script>
-<script src="enemy.js"></script>
-<script src="laser.js"></script>
-<script src="game.js"></script>
+<script src="js/shared.js"></script>
+<script src="js/entity.js"></script>
+<script src="js/base.js"></script>
+<script src="js/relay.js"></script>
+<script src="js/energy.js"></script>
+<script src="js/enemy.js"></script>
+<script src="js/laser.js"></script>
+<script src="js/game.js"></script>
