--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <header>
-    <h1 class="title">~ Transmission ~</h1>
+    <h1 class="title">~ Transmission <a id="version">v</a> ~</h1>
 </header>
 
 <div class="canvas">
